--- a/hugo.toml
+++ b/hugo.toml
@@ -18,24 +18,24 @@ theme = 'maverick'
 
 [menu]
   [[menu.main]]
-    identifier = "playgound"
-    name = "Playground"
-    url = "playground/"
-    weight = 2
-  [[menu.main]]
     identifier = "posts"
     name = "Posts"
-    url = "posts/"
+    url = "/hugo_blog/posts/"
     weight = 1
+  [[menu.main]]
+    identifier = "playgound"
+    name = "Playground"
+    url = "/hugo_blog/playground/"
+    weight = 2
   [[menu.main]]
     identifier = "notes"
     name = "Notes"
-    url = "notes/"
+    url = "/hugo_blog/notes/"
     weight = 3
   [[menu.main]]
     identifier = "about"
     name = "About"
-    url = "about/"
+    url = "/hugo_blog/about/"
     weight = 4
 
 [markup]
