--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://chajs226.github.io/hugo_blog/'
+baseURL = 'https://chajs226.github.io/'
 languageCode = 'ko-kr'
 title = "Junseong's Story"
 theme = 'maverick'
